# virtual-shell

./: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
docs/: assembly.md
examples/: bouncing_ball.asm  calculator.asm  factorial.asm  fibonacci.asm  hello_world.asm
src/app/: VfsEventProvider.tsx  globals.css  layout.tsx  page.tsx
src/app/source/: Cargo.toml  build.sh  package.json  terminal.d.ts
src/app/source/pkg/: README.md  package.json  source.d.ts  source.js  source_bg.wasm  source_bg.wasm.d.ts
src/app/source/src/: command.rs  context.rs  lib.rs  main.rs  storage.rs  vfs.rs  vfs_events.rs
src/app/source/src/commands/: alias.rs  cat.rs  cd.rs  chgrp.rs  chmod.rs  chown.rs  clear.rs  cp.rs  cpu.rs  curl.rs  echo.rs  edit.rs  env.rs  export.rs  functions.rs  grep.rs  help.rs  history.rs  kill.rs  killall.rs  ln.rs  ls.rs  mk.rs  mkdir.rs  mod.rs  mv.rs  ping.rs  ps.rs  pwd.rs  rawcreate.rs  rm.rs  rmdir.rs  sed.rs  set.rs  source.rs  storage.rs  touch.rs  unalias.rs  unzip.rs  zip.rs
