[package]
name = "source"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optimize for small code size
[profile.release]
opt-level = "s"
lto = true
