[package]
name = "source"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
uuid = { version = "1.8", features = ["v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
base64 = "0.22"
web-sys = { version = "0.3", features = [
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbCursor",
    "IdbCursorWithValue",
    "IdbKeyRange",
    "DomException",
    "IdbVersionChangeEvent",
    "IdbTransactionMode",
    "Event",
    "EventTarget",
    "Storage",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optimize for small code size
[profile.release]
opt-level = "s"
lto = true
