[package]
name = "source"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Storage",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "AbortController",
  "AbortSignal",
  "CustomEvent",
  "CustomEventInit",
  "Event",
  "EventTarget",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
regex = "1.10"
flate2 = { version = "1.0", features = ["rust_backend"] }
base64 = "0.21"
rexie = "0.4"
uuid = { version = "1.8", features = ["v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optimize for small code size
[profile.release]
opt-level = "s"
lto = true
